Add SpirvExecutionModel class to support multiple entrypoints
This class removes dependency on ShaderModel and supports multiple entrypoints with different exec models/shader kinds

--- a/tools/clang/lib/SPIRV/CMakeLists.txt
+++ b/tools/clang/lib/SPIRV/CMakeLists.txt
@@ -19,6 +19,7 @@ add_clang_library(clangSPIRV
   SpirvBuilder.cpp
   SpirvContext.cpp
   SpirvEmitter.cpp
+  SpirvExecutionModel.cpp
   SpirvFunction.cpp
   SpirvInstruction.cpp
   SpirvModule.cpp
